# kurz

./: .gitignore  README.md  docker-compose.yml  mac.py  main.py  requirements.txt  tag_extraction.py
frontend/: README.md  pyproject.toml
frontend/src/frontend/: main.py
kurz/: Dockerfile  README.md  docker-compose.yml  pyproject.toml
kurz-frontend/: Dockerfile  package-lock.json  package.json
kurz-frontend/src/: App.js  AppRouter.js  MovieClip.js  MovieClips.js
kurz-recommendation-api/: Dockerfile  README.md  pyproject.toml
kurz-recommendation-api/src/kurz_recommendation_api/: main.py
kurz/src/kurz/: log_util.py  mac.py  main.py  ollama_responses.txt  tag_extraction.py
kurz/src/kurz/movies/: bad_boys_subtitles.csv  forrest_gump_subtitles.csv  golden_eye_subtitles.csv  it_takes_to_subtitles.csv  jumanji_subtitles.csv  matilda_subtitles.csv  mulan_subtitles.csv  pocahontas_subtitles.csv  star_wars_four_subtitles.csv  the_parent_trap_subtitles.csv  toy_story_subtitles.csv  willy_wonka_chocolate_factory_subtitles.csv
kurz/src/kurz/results/: arristocats.txt  bad_boys.txt  forrest_gump.txt  golden_eye.txt  it_takes_to.txt  jumanji.txt  matilda.txt  mulan.txt  pocahontas.txt  star_wars_four.txt  the_parent_trap.txt  toy_story.txt  willy_wonka_chocolate_factory.txt
movies/: arristocats_subtitles.csv
