[project]
name = "kurz-recommendation-api"
version = "0.1.0"
description = ""
authors = [
    {name = "Jose Mendes",email = "zepedrosmendes@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi (>=0.115.12,<0.116.0)",
    "pandas (>=2.2.3,<3.0.0)",
    "uvicorn (>=0.34.0,<0.35.0)",
    "keybert (>=0.9.0,<0.10.0)"
]

[tool.poetry]
packages = [{include = "kurz_recommendation_api", from = "src"}]

[tool.poetry.scripts]
start = "src.kurz_recommendation_api.main:start"


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
